--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.7.0",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
